--- a/app/index.html
+++ b/app/index.html
@@ -41,10 +41,13 @@
   <link rel="stylesheet" href="./css/lib/dc.min.css">
   
   <!-- for openlayers -->
-  <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
+  <!-- <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css"> -->
+  <link rel="stylesheet" href="./css/lib/ol.css" type="text/css">
   <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
-  <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
+  <!-- <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script> -->
+  <!-- <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script> -->
+  <script src="./js/lib/polyfill.min.js"></script>
+  <script src="./js/lib/ol.js"></script>
 </head>
 <body class="keen-dashboard" style="padding-top: 80px;">
 
@@ -163,7 +166,7 @@
 	<!-- <script src="https://rawgit.com/square/crossfilter/master/crossfilter.min.js"></script> -->
 	<!-- <script src="https://rawgit.com/dc-js/dc.js/develop/dc.min.js"></script> -->
 	<!-- <script src='./js/dashboard_app.js' type='text/javascript'></script> -->
-	<script src="./js/lib/leaflet.js" crossorigin=""></script>
+	<!-- <script src="./js/lib/leaflet.js" crossorigin=""></script> -->
 	<script src="./js/lib/d3.v5.min.js"></script>
 	<script src="./js/lib/crossfilter.min.js"></script>
 	<script src="./js/lib/dc.min.js"></script>
